# lc3-vm

./: Cargo.toml  Makefile  README.md
images/: test-image-load-big-endian
src/: main.rs
src/lc3/: bytes.rs  instructions.rs  memory.rs  mod.rs  opcode.rs  trap.rs  vm.rs
